welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:15: error: value nbBiscuits is not a member of Unit
possible cause: maybe a semicolon is missing before `value nbBiscuits'?
	}nbBiscuits = 0
         ^